iste yaptiklarim 7nov2023

--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Tiren-Yol</title>
 </head>
 
@@ -14,44 +14,99 @@
     <header class="main-header">
         <div class="top-banner">
             <a id="top-banner-image" href="/"><img
-                    src="/images/web-home-page-top-tr-TR-1699218000000-SAGson1_2x.jpg"></a>
+                    src="./images/web-home-page-top-tr-TR-1699218000000-SAGson1_2x.jpg"></a>
         </div>
     </header>
     <nav class="main-nav">
-        <div class="toplinks">
-            <a href="/">İndirim Kuponlarım</a>
-            <a href="/">Tirenyol'da Satış Yap</a>
-            <a href="/">Hakkımızda</a>
-            <a href="/">Yardım & Destek</a>
+        <div class="main-toplinks">
+            <div class="toplinks">
+                <a href="/">İndirim Kuponlarım</a>
+                <a href="/">Tirenyol'da Satış Yap</a>
+                <a href="/">Hakkımızda</a>
+                <a href="/">Yardım & Destek</a>
+            </div>
         </div>
-        <div class="main-navbar">
-            <div class="logo">
-                <img src="/images/ty-cumhuriyet-100-logo.svg" alt="">
+        <div class="sticky-navbar">
+            <div class="main-navbar">
+                <div class="logo">
+                    <img src="./images/ty-cumhuriyet-100-logo.svg" alt="">
+                </div>
+                <div class="search-bar">
+                    <input type="text" placeholder="Aradığınız ürün, kategori veya markayı yazınız">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+
+                </div>
+                <div class="menu-items">
+                    <div class="nav-link"><a href="/"><i class="fa-solid fa-user"></i>Giriş Yap</a></div>
+                    <div class="nav-link"><a href="/"><i class="fa-solid fa-heart"></i>Favorilerim</a></div>
+                    <div class="nav-link"><a href="/"><i class="fa-solid fa-cart-shopping"></i>Sepetim</a></div>
+                </div>
             </div>
-            <div class="search-bar">
-                <input type="text" placeholder="Aradığınız ürün, kategori veya markayı yazınız">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                </input>
-            </div>
-            <div class="menu-items">
-                <div class="login-link"><a href="/"><i class="fa-solid fa-user"></i>Giriş Yap</a></div>
-                <div class="Fav-link"><a href="/"><i class="fa-solid fa-heart"></i>Favorilerim</a></div>
-                <div class="cart-link"><a href="/"><i class="fa-solid fa-cart-shopping"></i>Sepetim</a></div>
-            </div>
+        </div>
+        <div class="sub-nav">
+            <a href="/">Kadın</a>
+            <a href="/">Erkek</a>
+            <a href="/">Anne & Çocuk</a>
+            <a href="/">Ev & Mobilya</a>
+            <a href="/">Süpermarket</a>
+            <a href="/">Kozmatik</a>
+            <a href="/">Ayakkabi & Çanta</a>
+            <a href="/">Elektronik</a>
+            <a href="/">Spor&Outdoor</a>
+            <a href="/">Çok Satanlar <p class="yeni-banner">Yeni</p></a>
+            <a href="/">Flaş Ürünler <p class="yeni-banner">Yeni</p></a>
+
         </div>
     </nav>
-    <main>
-        <div>
-            <article>
-                <h2></h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, cum.</p>
-            </article>
+    <div class="container">
+        <div class="circlelink-bar">
+            <a href="circlelink"><img class="circleimage" src="./images/En_Cok_Satanlar_202302142041.png.webp"
+                    alt=""><p>Sen De Al!</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Senin_Icin_Sectik_202302142041.png.webp"
+                    alt=""><p>Sana Özel</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307261451.png.webp" alt=""><p>Kredi
+                    Kartı</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307201111.png.webp"
+                    alt=""><p>Kurumsal</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202305051022.png.webp"
+                    alt=""><p>Şanslı Çekiliş</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Kredilercircle_202308221603.png.webp"
+                    alt=""><p>Krediler</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Apple_202301262111.jpg.webp"
+                    alt=""><p>Apple</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Trendyolmilla_202301280120.jpg.webp"
+                    alt=""><p>TirenyolMilla</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Topstory_202303311553.jpg.webp"
+                    alt=""><p>Pull & Bear</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Philips_202301271558.jpg.webp"
+                    alt=""><p>Philips</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Xiaomi_202301280236.jpg.webp"
+                    alt=""><p>Xiaomi</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Samsung_202301271715.jpg.webp"
+                    alt=""><p>Samsung</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Karaca_202302131917.jpg.webp"
+                    alt=""><p>Karaca</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Roborock_202301271629.jpg.webp"
+                    alt=""><p>Roborock</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Stradivarius_202304260936.png.webp"
+                    alt=""><p>Stradivarius</p></a>
+            <a href="circlelink"><img class="circleimage" src="./images/Defacto_202301270049.jpg.webp"
+                    alt=""><p>Defacto</p></a>
+
+
         </div>
-    </main>
-    <footer>
+        <main>
+            <div>
+                <article>
+                    <h2></h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, cum.</p>
+                </article>
+            </div>
+        </main>
+        <footer>
 
-    </footer>
-
+        </footer>
+    </div>
 </body>
 
 </html>
