kampanyalar eklenmeye basladi

--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -60,42 +60,71 @@
     </nav>
     <div class="container">
         <div class="circlelink-bar">
-            <a href="circlelink"><img class="circleimage" src="./images/En_Cok_Satanlar_202302142041.png.webp"
-                    alt=""><p>Sen De Al!</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Senin_Icin_Sectik_202302142041.png.webp"
-                    alt=""><p>Sana Özel</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307261451.png.webp" alt=""><p>Kredi
-                    Kartı</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307201111.png.webp"
-                    alt=""><p>Kurumsal</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Widget_202305051022.png.webp"
-                    alt=""><p>Şanslı Çekiliş</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Kredilercircle_202308221603.png.webp"
-                    alt=""><p>Krediler</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Apple_202301262111.jpg.webp"
-                    alt=""><p>Apple</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Trendyolmilla_202301280120.jpg.webp"
-                    alt=""><p>TirenyolMilla</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Topstory_202303311553.jpg.webp"
-                    alt=""><p>Pull & Bear</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Philips_202301271558.jpg.webp"
-                    alt=""><p>Philips</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Xiaomi_202301280236.jpg.webp"
-                    alt=""><p>Xiaomi</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Samsung_202301271715.jpg.webp"
-                    alt=""><p>Samsung</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Karaca_202302131917.jpg.webp"
-                    alt=""><p>Karaca</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Roborock_202301271629.jpg.webp"
-                    alt=""><p>Roborock</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Stradivarius_202304260936.png.webp"
-                    alt=""><p>Stradivarius</p></a>
-            <a href="circlelink"><img class="circleimage" src="./images/Defacto_202301270049.jpg.webp"
-                    alt=""><p>Defacto</p></a>
-
-
+            <a href="circlelink"><img class="circleimage" src="./images/En_Cok_Satanlar_202302142041.png.webp" alt="">
+                <p>Sen De Al!</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Senin_Icin_Sectik_202302142041.png.webp" alt="">
+                <p>Sana Özel</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307261451.png.webp" alt="">
+                <p>Kredi
+                    Kartı</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202307201111.png.webp" alt="">
+                <p>Kurumsal</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Widget_202305051022.png.webp" alt="">
+                <p>Şanslı Çekiliş</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Kredilercircle_202308221603.png.webp" alt="">
+                <p>Krediler</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Apple_202301262111.jpg.webp" alt="">
+                <p>Apple</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Trendyolmilla_202301280120.jpg.webp" alt="">
+                <p>TirenyolMilla</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Topstory_202303311553.jpg.webp" alt="">
+                <p>Pull & Bear</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Philips_202301271558.jpg.webp" alt="">
+                <p>Philips</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Xiaomi_202301280236.jpg.webp" alt="">
+                <p>Xiaomi</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Samsung_202301271715.jpg.webp" alt="">
+                <p>Samsung</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Karaca_202302131917.jpg.webp" alt="">
+                <p>Karaca</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Roborock_202301271629.jpg.webp" alt="">
+                <p>Roborock</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Stradivarius_202304260936.png.webp" alt="">
+                <p>Stradivarius</p>
+            </a>
+            <a href="circlelink"><img class="circleimage" src="./images/Defacto_202301270049.jpg.webp" alt="">
+                <p>Defacto</p>
+            </a>
         </div>
         <main>
+            <div class="banner-listing-items">
+                <a href=""><img src="./images/Sepet_202304181225.png" alt=""></a>
+                <a href=""><img src="./images/Onecikan_202304181225.png" alt=""></a>
+                <a href=""><img src="./images/Flash_202304181225.png" alt=""></a>
+            </div>
+            <div class="kampanyalar">
+                <div class="kampanya">
+                    <img src="./images/mobile_20230919142900_2311009KadinMobile202309191703.jpg.webp" alt="">
+                    <p>
+                        <a href="/"></a>
+                        
+                    </p>
+                </div>
+            </div>
             <div>
                 <article>
                     <h2></h2>
