--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -118,11 +118,40 @@
             </div>
             <div class="kampanyalar">
                 <div class="kampanya">
-                    <img src="./images/mobile_20230919142900_2311009KadinMobile202309191703.jpg.webp" alt="">
-                    <p>
-                        <a href="/"></a>
-                        
-                    </p>
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20230919142900_2311009KadinMobile202309191703.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
+                </div>
+                <div class="kampanya">
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20231009130806_2304971KadinMobile202310091601.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
+                </div>
+                <div class="kampanya">
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20231012135758_trwoman121023partymobile1.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
+                </div>
+                <div class="kampanya">
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20231102083615_2324835KadinMobile2023100418011.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
+                </div>
+                <div class="kampanya">
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20231102113651_2303644KadinMobile202311021401.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
+                </div>
+                <div class="kampanya">
+                    <a class="kampanya-link" href="/">
+                        <img src="./images/mobile_20231103131626_2331033KadinMobile202311031601.jpg.webp" alt="">
+                        <p>Mudo Kampanyasi</p>
+                    </a>
                 </div>
             </div>
             <div>
