derse girerken ppush

--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -120,37 +120,37 @@
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20230919142900_2311009KadinMobile202309191703.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>Mudo Kampanyası</p>
                     </a>
                 </div>
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20231009130806_2304971KadinMobile202310091601.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>Addax Kampanyası</p>
                     </a>
                 </div>
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20231012135758_trwoman121023partymobile1.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>Yeni Sezon, Yani Parçalar...</p>
                     </a>
                 </div>
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20231102083615_2324835KadinMobile2023100418011.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>Pull & Bear Ürünleri</p>
                     </a>
                 </div>
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20231102113651_2303644KadinMobile202311021401.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>İpekyol Twist</p>
                     </a>
                 </div>
                 <div class="kampanya">
                     <a class="kampanya-link" href="/">
                         <img src="./images/mobile_20231103131626_2331033KadinMobile202311031601.jpg.webp" alt="">
-                        <p>Mudo Kampanyasi</p>
+                        <p>Bershka Ürünleri</p>
                     </a>
                 </div>
             </div>
