9 kasim dersden once odev hali

--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -161,10 +161,67 @@
                 </article>
             </div>
         </main>
-        <footer>
-
-        </footer>
     </div>
+    <footer>
+        <div class="footercontainer">
+            <div class="footerlinks">
+                <h2>Tirenyol</h2>
+                <a href="/">Biz kimiz</a>
+                <a href="/">Kariyer</a>
+                <a href="/">Iletisim</a>
+                <a href="/">Trenyolda Satis Yap</a>
+                <h3>Guvenli alisveris</h3>
+                <div class="guvenlialisveris">
+                    <a class="odemeimage" href="/"><img src="/images/troy-logo.png" alt=""></a>
+                    <a class="odemeimage" href="/"><img src="/images/Mastercard-logo.svg.png" alt=""></a>
+                    <a class="odemeimage" href="/"><img src="/images/visa.png" alt=""></a>
+                    <a class="odemeimage" href="/"><img src="/images/american express.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footerlinks">
+                <h2>About us</h2>
+                <a href="/">Who we are</a>
+                <a href="/">Careers</a>
+                <a href="/">Contact us</a>
+                <a href="/">Sustainability</a>
+                <h3>Mobil Uygulamalar</h3>
+                <div class="mobiluygulamalar">
+                    <a href="/">image appstore</a>
+                    <a href="/">google play</a>
+                    <a href="/">appgalery</a>
+
+                </div>
+            </div>
+            <div class="footerlinks">
+                <h2>Kampanyalar</h2>
+                <a href="/">Aktif Kampanyalar</a>
+                <a href="/">Elite Uyelik</a>
+                <a href="/">Hediye Fikirleri</a>
+                <a href="/">Trenyol Firsatlari</a>
+                <h3>Sosyal Medya</h3>
+                <div class="sosyalmedya">
+                    <a href="/">icon facebook</a>
+                    <a href="/">icon instagram</a>
+                    <a href="/">icon x/twitter</a>
+                    <a href="/">icon youtube</a>
+                </div>
+            </div>
+            <div class="footerlinks">
+                <h2>Yardim</h2>
+                <a href="/">Yardim</a>
+                <a href="/">S.S.S.</a>
+                <a href="/">Canli Yardim</a>
+                <a href="/">Nasil Iade Edebilirim</a>
+                <h3>Ulke degistir</h3>
+                <div class="guvenlialisveris">
+                    <a href="/">image troy</a>
+                    <a href="/">mastercard</a>
+
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
