--- a/01-odev-trendyol/index.html
+++ b/01-odev-trendyol/index.html
@@ -61,53 +61,54 @@
     <div class="container">
         <div class="circlelink-bar">
             <a href="circlelink"><img class="circleimage" src="./images/En_Cok_Satanlar_202302142041.png.webp" alt="">
-                <p>Sen De Al!</p>
+                <p class="circlelink-p">Sen De Al!</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Senin_Icin_Sectik_202302142041.png.webp" alt="">
-                <p>Sana Özel</p>
+                <p class="circlelink-p">Sana Özel</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Widget_202307261451.png.webp" alt="">
-                <p>Kredi
+                <p class="circlelink-p">Kredi
                     Kartı</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Widget_202307201111.png.webp" alt="">
-                <p>Kurumsal</p>
+                <p class="circlelink-p">Kurumsal</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Widget_202305051022.png.webp" alt="">
-                <p>Şanslı Çekiliş</p>
+                <p class="circlelink-p">Şanslı Çekiliş</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Kredilercircle_202308221603.png.webp" alt="">
-                <p>Krediler</p>
+                <p class="circlelink-p">Krediler</p>
             </a>
-            <a href="circlelink"><img class="circleimage" src="./images/Apple_202301262111.jpg.webp" alt="">
-                <p>Apple</p>
+            <a href="circlelink">
+                <img class="circleimage" src="./images/Apple_202301262111.jpg.webp" alt="">
+                <p class="circlelink-p">Apple</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Trendyolmilla_202301280120.jpg.webp" alt="">
-                <p>TirenyolMilla</p>
+                <p class="circlelink-p">TirenyolMilla</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Topstory_202303311553.jpg.webp" alt="">
-                <p>Pull & Bear</p>
+                <p class="circlelink-p">Pull & Bear</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Philips_202301271558.jpg.webp" alt="">
-                <p>Philips</p>
+                <p class="circlelink-p">Philips</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Xiaomi_202301280236.jpg.webp" alt="">
-                <p>Xiaomi</p>
+                <p class="circlelink-p">Xiaomi</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Samsung_202301271715.jpg.webp" alt="">
-                <p>Samsung</p>
+                <p class="circlelink-p">Samsung</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Karaca_202302131917.jpg.webp" alt="">
-                <p>Karaca</p>
+                <p class="circlelink-p">Karaca</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Roborock_202301271629.jpg.webp" alt="">
-                <p>Roborock</p>
+                <p class="circlelink-p">Roborock</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Stradivarius_202304260936.png.webp" alt="">
-                <p>Stradivarius</p>
+                <p class="circlelink-p">Stradivarius</p>
             </a>
             <a href="circlelink"><img class="circleimage" src="./images/Defacto_202301270049.jpg.webp" alt="">
-                <p>Defacto</p>
+                <p class="circlelink-p">Defacto</p>
             </a>
         </div>
         <main>
